force-app/main/default/objects/Account/fields/Account_Umsatz__c.field-meta.xml
<CustomField>
    <fullName>Account_Umsatz__c</fullName>
    <label>Projekt Umsatz</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>