force-app/main/default/objects/Account/fields/Category_List__c.field-meta.xml
<CustomField>
    <fullName>Category_List__c</fullName>
    <label>Category List</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ad network</fullName>
            </value>
            <value>
                <fullName>advertising</fullName>
            </value>
            <value>
                <fullName>advertising platforms</fullName>
            </value>
            <value>
                <fullName>apps</fullName>
            </value>
            <value>
                <fullName>architecture</fullName>
            </value>
            <value>
                <fullName>artificial intelligence</fullName>
            </value>
            <value>
                <fullName>auto insurance</fullName>
            </value>
            <value>
                <fullName>automotive</fullName>
            </value>
            <value>
                <fullName>autonomous vehicles</fullName>
            </value>
            <value>
                <fullName>b2b</fullName>
            </value>
            <value>
                <fullName>baby</fullName>
            </value>
            <value>
                <fullName>battery</fullName>
            </value>
            <value>
                <fullName>beauty</fullName>
            </value>
            <value>
                <fullName>big data</fullName>
            </value>
            <value>
                <fullName>broadcasting</fullName>
            </value>
            <value>
                <fullName>cloud computing</fullName>
            </value>
            <value>
                <fullName>cloud data services</fullName>
            </value>
            <value>
                <fullName>cloud security</fullName>
            </value>
            <value>
                <fullName>collaborative consumption</fullName>
            </value>
            <value>
                <fullName>computer</fullName>
            </value>
            <value>
                <fullName>computer vision</fullName>
            </value>
            <value>
                <fullName>consumer</fullName>
            </value>
            <value>
                <fullName>consumer electronics</fullName>
            </value>
            <value>
                <fullName>content</fullName>
            </value>
            <value>
                <fullName>cyber security</fullName>
            </value>
            <value>
                <fullName>data integration</fullName>
            </value>
            <value>
                <fullName>developer tools</fullName>
            </value>
            <value>
                <fullName>digital entertainment</fullName>
            </value>
            <value>
                <fullName>digital media</fullName>
            </value>
            <value>
                <fullName>document management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>