force-app/main/default/objects/Account/fields/crunchbase__Crunchbase_Enrichment_Id__c.field-meta.xml
<CustomField>
    <fullName>crunchbase__Crunchbase_Enrichment_Id__c</fullName>
    <description>This is a temporary Id used to link records created from the crunchbase search page</description>
    <externalId>true</externalId>
    <label>Object ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>