force-app/main/default/objects/Account/fields/crunchbase__Latest_Round_Date__c.field-meta.xml
<CustomField>
    <fullName>crunchbase__Latest_Round_Date__c</fullName>
    <label>Latest Round - Date</label>
    <type>Date</type>
</CustomField>