force-app/main/default/objects/Account/fields/crunchbase__Number_of_Acquisitions__c.field-meta.xml
<CustomField>
    <fullName>crunchbase__Number_of_Acquisitions__c</fullName>
    <description>Number of acquisitions made by this company</description>
    <inlineHelpText>Number of acquisitions made by this company</inlineHelpText>
    <label>Number of Acquisitions (#)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>