force-app/main/default/objects/Account/fields/crunchbase__Number_of_Employees_Crunchbase__c.field-meta.xml
<CustomField>
    <fullName>crunchbase__Number_of_Employees_Crunchbase__c</fullName>
    <label>Number of Employees (Crunchbase)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - 10</fullName>
            </value>
            <value>
                <fullName>11 - 50</fullName>
            </value>
            <value>
                <fullName>51 - 100</fullName>
            </value>
            <value>
                <fullName>101 - 250</fullName>
            </value>
            <value>
                <fullName>251 - 500</fullName>
            </value>
            <value>
                <fullName>501 - 1000</fullName>
            </value>
            <value>
                <fullName>1001 - 5000</fullName>
            </value>
            <value>
                <fullName>5001 - 10000</fullName>
            </value>
            <value>
                <fullName>10001 - 1000000</fullName>
                <label>10001+</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>