force-app/main/default/objects/Account/fields/crunchbase__Number_of_Funding_Rounds__c.field-meta.xml
<CustomField>
    <fullName>crunchbase__Number_of_Funding_Rounds__c</fullName>
    <description>Number of funding rounds raised</description>
    <inlineHelpText>Number of funding rounds raised</inlineHelpText>
    <label>Number of Funding Rounds (#)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>