force-app/main/default/objects/Account/fields/crunchbase__Number_of_Funding_Rounds_Formula__c.field-meta.xml
<CustomField>
    <fullName>crunchbase__Number_of_Funding_Rounds_Formula__c</fullName>
    <formula>IF(ISBLANK( crunchbase__Crunchbase_URL__c) , &quot;&quot;,  
IF(ISNULL(crunchbase__Number_of_Funding_Rounds__c) || crunchbase__Number_of_Funding_Rounds__c == 0,
&#39;No Funding Available&#39;,
HYPERLINK(crunchbase__Crunchbase_URL__c + &#39;/funding-rounds&#39;, TEXT(crunchbase__Number_of_Funding_Rounds__c) + &#39; Rounds Raised&#39;)
)
)</formula>
    <label>Number of Funding Rounds</label>
    <type>Text</type>
</CustomField>