force-app/main/default/objects/Account/fields/crunchbase__Number_of_Investments__c.field-meta.xml
<CustomField>
    <fullName>crunchbase__Number_of_Investments__c</fullName>
    <label>Number of Investments (#)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>