force-app/main/default/objects/Account/fields/crunchbase__Number_of_Investments_Formula__c.field-meta.xml
<CustomField>
    <fullName>crunchbase__Number_of_Investments_Formula__c</fullName>
    <formula>IF(ISBLANK( crunchbase__Crunchbase_URL__c) , &quot;&quot;, 
IF(ISNULL(crunchbase__Number_of_Investments__c) || crunchbase__Number_of_Investments__c == 0, 
&#39;No Investments Available&#39;, 
HYPERLINK(crunchbase__Crunchbase_URL__c + &#39;/investments&#39;, TEXT(crunchbase__Number_of_Investments__c) + &#39; Investments Made&#39;)
)
)</formula>
    <label>Number of Investments</label>
    <type>Text</type>
</CustomField>