force-app/main/default/objects/Account/fields/crunchbase__Number_of_Investors_Formula__c.field-meta.xml
<CustomField>
    <fullName>crunchbase__Number_of_Investors_Formula__c</fullName>
    <formula>IF(ISBLANK( crunchbase__Crunchbase_URL__c) , &quot;&quot;, 
IF(ISNULL(crunchbase__Number_of_Investors__c) || crunchbase__Number_of_Investors__c == 0, 
&#39;No Investors Available&#39;, 
HYPERLINK(crunchbase__Crunchbase_URL__c + &#39;/investors&#39;, TEXT(crunchbase__Number_of_Investors__c) + &#39; Investors&#39;)
)
)</formula>
    <label>Number of Investors</label>
    <type>Text</type>
</CustomField>