force-app/main/default/objects/Account/fields/crunchbase__Total_Funding_USD__c.field-meta.xml
<CustomField>
    <fullName>crunchbase__Total_Funding_USD__c</fullName>
    <description>Total funding raised in USD</description>
    <inlineHelpText>Total funding raised in USD</inlineHelpText>
    <label>Total Funding (USD)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>