force-app/main/default/objects/Account/fields/E_Mail__c.field-meta.xml
<CustomField>
    <fullName>E_Mail__c</fullName>
    <label>E-Mail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>