force-app/main/default/objects/Account/fields/Employee_count__c.field-meta.xml
<CustomField>
    <fullName>Employee_count__c</fullName>
    <label>Employee count</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Employee_count</valueSetName>
    </valueSet>
</CustomField>