force-app/main/default/objects/Account/fields/Founded_on__c.field-meta.xml
<CustomField>
    <fullName>Founded_on__c</fullName>
    <label>Founded on</label>
    <type>Date</type>
</CustomField>