force-app/main/default/objects/Account/fields/Kundensegment__c.field-meta.xml
<CustomField>
    <fullName>Kundensegment__c</fullName>
    <description>Auswahl des Kundensegments: Gold/Silber/Bronze</description>
    <label>Kundensegment</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silber</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
                <default>true</default>
                <label>Bronze</label>
            </value>
            <value>
                <fullName>tbd</fullName>
                <label>Noch unklar</label>
            </value>
            <value>
                <fullName>Nicht relevant</fullName>
                <label>Aktuell kein Fokus</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>