force-app/main/default/objects/Account/fields/Permalink__c.field-meta.xml
<CustomField>
    <fullName>Permalink__c</fullName>
    <label>Permalink</label>
    <type>Url</type>
</CustomField>