force-app/main/default/objects/Account/fields/Profile_Image__c.field-meta.xml
<CustomField>
    <fullName>Profile_Image__c</fullName>
    <formula>if(len(Profile_Image_URL__c)&gt;1,IMAGE( Profile_Image_URL__c , &#39;Profile Image&#39;),&#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profile Image</label>
    <type>Text</type>
</CustomField>