force-app/main/default/objects/Account/fields/Share_with__c.field-meta.xml
<CustomField>
    <fullName>Share_with__c</fullName>
    <label>Share with</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
                <default>true</default>
                <label>Internal</label>
            </value>
            <value>
                <fullName>KPMG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>