force-app/main/default/objects/Account/fields/Vat_Id__c.field-meta.xml
<CustomField>
    <fullName>Vat_Id__c</fullName>
    <description>Account VAT Id</description>
    <label>VAT-Id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>