force-app/main/default/objects/Account/validationRules/billing_address.validationRule-meta.xml
<ValidationRule>
    <fullName>billing_address</fullName>
    <active>false</active>
    <errorConditionFormula>OR ( 
ISBLANK(BillingStreet), 
ISBLANK(BillingCity), 
LEN(BillingCountry) &lt;&gt; 2)</errorConditionFormula>
    <errorMessage>Please provide a billing address</errorMessage>
</ValidationRule>