force-app/main/default/objects/Account/validationRules/Vortrag.validationRule-meta.xml
<ValidationRule>
    <fullName>Vortrag</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
ISPICKVAL(AccountSource, &#39;Vortrag (nicht CK)&#39;),
ISPICKVAL(AccountSource, &#39;Vortrag&#39;)
),
ISBLANK( Vortrag__c )
)</errorConditionFormula>
    <errorDisplayField>Vortrag__c</errorDisplayField>
    <errorMessage>Bitte die genaue Veranstaltung angeben</errorMessage>
</ValidationRule>