force-app/main/default/objects/Account/listViews/New_Accounts.listView-meta.xml
<ListView>
    <fullName>New_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Primary_Role__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.CREATED_DATE</field>
        <operation>notEqual</operation>
        <value>2/9/2018 12:00 AM</value>
    </filters>
    <label>New Accounts</label>
</ListView>